--- a/02-K8s/11-ConfigMap/exp1/02-Nginx-Pod.yaml
+++ b/02-K8s/11-ConfigMap/exp1/02-Nginx-Pod.yaml
@@ -5,6 +5,8 @@ metadata:
   labels:
     app: helloworld-nginx
 spec:
+  imagePullSecrets:
+  - name: regcred
   containers:
   - name: nginx
     image: nginx
